// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsListPage should change actions for projects under review 1`] = `
<div class="page">
  <mock-el-dialog append-to-body="" title="Create project" class="dialog">
    <div mock-v-loading="0">
      <form class="el-form el-form--label-top" size="mini">
        <div><label class="leading-6"><span class="font-medium">Title</span>
            <div class="py-1 el-input">
              <!----><input type="text" autocomplete="off" max-length="50" class="el-input__inner">
              <!---->
              <!---->
              <!---->
              <!---->
            </div></label></div>
        <div class="el-form-item my-3">
          <!---->
          <div class="el-form-item__content"><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
      Allow other users to see this project
    <!----></span></label>
            <transition-stub name="el-zoom-in-top">
              <!---->
            </transition-stub>
          </div>
        </div>
      </form>
      <div>
        <h4 class="m-0">
          Would you like to include previously submitted datasets?
        </h4>
        <div>
          <div class="select-buttons"><a href="#">Select none</a> <span> | </span> <a href="#">Select all</a></div>
          <div class="dataset-checkbox-list leading-6 proportional-nums">
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.0.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.0.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.1.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.1.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
          </div>
        </div>
      </div>
      <div class="button-bar"><button type="button" class="el-button el-button--default">
          <!---->
          <!----><span>
        Cancel
      </span></button> <button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
        Create project and include 2 datasets
      </span></button></div>
    </div>
  </mock-el-dialog>
  <div class="page-content">
    <div class="header-row">
      <div class="filter-panel">
        <!---->
        <mock-el-select class="filter-select" data-test-key="simpleFilter" filter-key="simpleFilter">
          <mock-el-option label="All projects"></mock-el-option>
          <mock-el-option value="my-projects" label="My projects"></mock-el-option>
        </mock-el-select>
        <div class="tf-outer w-auto el-input el-input-group el-input-group--prepend" data-test-key="simpleQuery" filter-key="simpleQuery" name="Simple query" options="">
          <div class="el-input-group__prepend"><i class="el-icon-search -mx-1"></i></div><input type="text" autocomplete="off" placeholder="Enter keywords" class="el-input__inner">
          <!---->
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div style="flex-grow: 1;"></div> <button type="button" class="el-button el-button--default">
        <!---->
        <!----><span>
        Create project
      </span></button>
    </div>
    <div class="clearfix"></div>
    <div style="min-height: 100px;" mock-v-loading="false">
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/proj-one" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/proj-one" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project one
              </a> <i title="This project is only visible to its members and METASPACE administrators" class="el-icon-lock ml-2 text-xl"></i></div>
            <div>
              <div class="info-line">
                <!---->
                1 member
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.0.members.0.user.primaryGroup.group.id" class="">
                  allProjects.0.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Under review
          </span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <!---->
            <div><i class="el-icon-edit"></i> <a href="/project/proj-one?tab=settings" class="">
                Manage project
              </a></div>
            <!---->
          </div>
        </div>
      </div>
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/project%202" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/project%202" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project two
              </a>
              <!---->
            </div>
            <div>
              <div class="info-line"><span><a href="/datasets?prj=project%202" class=""><span>20 datasets</span></a>,
                </span>
                20 members
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.1.members.0.user.primaryGroup.group.id" class="">
                  allProjects.1.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Last submission <mock-elapsed-time date="2018-08-01T09:00:00.000"></mock-elapsed-time></span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <div><i class="el-icon-picture"></i> <a href="/annotations?db=&amp;prj=project%202" class="">
                Browse annotations
              </a></div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="text-align: center;">
      <mock-el-pagination total="69" page-size="10" current-page="1" layout="prev,pager,next"></mock-el-pagination>
    </div>
  </div>
</div>
`;

exports[`ProjectsListPage should change actions for published projects 1`] = `
<div class="page">
  <mock-el-dialog append-to-body="" title="Create project" class="dialog">
    <div mock-v-loading="0">
      <form class="el-form el-form--label-top" size="mini">
        <div><label class="leading-6"><span class="font-medium">Title</span>
            <div class="py-1 el-input">
              <!----><input type="text" autocomplete="off" max-length="50" class="el-input__inner">
              <!---->
              <!---->
              <!---->
              <!---->
            </div></label></div>
        <div class="el-form-item my-3">
          <!---->
          <div class="el-form-item__content"><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
      Allow other users to see this project
    <!----></span></label>
            <transition-stub name="el-zoom-in-top">
              <!---->
            </transition-stub>
          </div>
        </div>
      </form>
      <div>
        <h4 class="m-0">
          Would you like to include previously submitted datasets?
        </h4>
        <div>
          <div class="select-buttons"><a href="#">Select none</a> <span> | </span> <a href="#">Select all</a></div>
          <div class="dataset-checkbox-list leading-6 proportional-nums">
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.0.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.0.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.1.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.1.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
          </div>
        </div>
      </div>
      <div class="button-bar"><button type="button" class="el-button el-button--default">
          <!---->
          <!----><span>
        Cancel
      </span></button> <button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
        Create project and include 2 datasets
      </span></button></div>
    </div>
  </mock-el-dialog>
  <div class="page-content">
    <div class="header-row">
      <div class="filter-panel">
        <!---->
        <mock-el-select class="filter-select" data-test-key="simpleFilter" filter-key="simpleFilter">
          <mock-el-option label="All projects"></mock-el-option>
          <mock-el-option value="my-projects" label="My projects"></mock-el-option>
        </mock-el-select>
        <div class="tf-outer w-auto el-input el-input-group el-input-group--prepend" data-test-key="simpleQuery" filter-key="simpleQuery" name="Simple query" options="">
          <div class="el-input-group__prepend"><i class="el-icon-search -mx-1"></i></div><input type="text" autocomplete="off" placeholder="Enter keywords" class="el-input__inner">
          <!---->
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div style="flex-grow: 1;"></div> <button type="button" class="el-button el-button--default">
        <!---->
        <!----><span>
        Create project
      </span></button>
    </div>
    <div class="clearfix"></div>
    <div style="min-height: 100px;" mock-v-loading="false">
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/proj-one" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/proj-one" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project one
              </a> <i title="This project is only visible to its members and METASPACE administrators" class="el-icon-lock ml-2 text-xl"></i></div>
            <div>
              <div class="info-line">
                <!---->
                1 member
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.0.members.0.user.primaryGroup.group.id" class="">
                  allProjects.0.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Published <mock-elapsed-time></mock-elapsed-time></span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <!---->
            <div><i class="el-icon-edit"></i> <a href="/project/proj-one?tab=settings" class="">
                Manage project
              </a></div>
            <!---->
          </div>
        </div>
      </div>
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/project%202" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/project%202" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project two
              </a>
              <!---->
            </div>
            <div>
              <div class="info-line"><span><a href="/datasets?prj=project%202" class=""><span>20 datasets</span></a>,
                </span>
                20 members
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.1.members.0.user.primaryGroup.group.id" class="">
                  allProjects.1.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Published <mock-elapsed-time></mock-elapsed-time></span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <div><i class="el-icon-picture"></i> <a href="/annotations?db=&amp;prj=project%202" class="">
                Browse annotations
              </a></div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="text-align: center;">
      <mock-el-pagination total="69" page-size="10" current-page="1" layout="prev,pager,next"></mock-el-pagination>
    </div>
  </div>
</div>
`;

exports[`ProjectsListPage should match snapshot 1`] = `
<div class="page">
  <mock-el-dialog append-to-body="" title="Create project" class="dialog">
    <div mock-v-loading="0">
      <form class="el-form el-form--label-top" size="mini">
        <div><label class="leading-6"><span class="font-medium">Title</span>
            <div class="py-1 el-input">
              <!----><input type="text" autocomplete="off" max-length="50" class="el-input__inner">
              <!---->
              <!---->
              <!---->
              <!---->
            </div></label></div>
        <div class="el-form-item my-3">
          <!---->
          <div class="el-form-item__content"><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
      Allow other users to see this project
    <!----></span></label>
            <transition-stub name="el-zoom-in-top">
              <!---->
            </transition-stub>
          </div>
        </div>
      </form>
      <div>
        <h4 class="m-0">
          Would you like to include previously submitted datasets?
        </h4>
        <div>
          <div class="select-buttons"><a href="#">Select none</a> <span> | </span> <a href="#">Select all</a></div>
          <div class="dataset-checkbox-list leading-6 proportional-nums">
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.0.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.0.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
            <div><label class="el-checkbox is-checked"><span class="el-checkbox__input is-checked"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span><span class="el-checkbox__label">
        allDatasets.1.name
        <span class="text-gray-700">
          (submitted <mock-elapsed-time date="allDatasets.1.uploadDT"></mock-elapsed-time>)
        </span>
                <!----></span></label></div>
          </div>
        </div>
      </div>
      <div class="button-bar"><button type="button" class="el-button el-button--default">
          <!---->
          <!----><span>
        Cancel
      </span></button> <button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
        Create project and include 2 datasets
      </span></button></div>
    </div>
  </mock-el-dialog>
  <div class="page-content">
    <div class="header-row">
      <div class="filter-panel">
        <!---->
        <mock-el-select class="filter-select" data-test-key="simpleFilter" filter-key="simpleFilter">
          <mock-el-option label="All projects"></mock-el-option>
          <mock-el-option value="my-projects" label="My projects"></mock-el-option>
        </mock-el-select>
        <div class="tf-outer w-auto el-input el-input-group el-input-group--prepend" data-test-key="simpleQuery" filter-key="simpleQuery" name="Simple query" options="">
          <div class="el-input-group__prepend"><i class="el-icon-search -mx-1"></i></div><input type="text" autocomplete="off" placeholder="Enter keywords" class="el-input__inner">
          <!---->
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div style="flex-grow: 1;"></div> <button type="button" class="el-button el-button--default">
        <!---->
        <!----><span>
        Create project
      </span></button>
    </div>
    <div class="clearfix"></div>
    <div style="min-height: 100px;" mock-v-loading="false">
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/proj-one" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/proj-one" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project one
              </a> <i title="This project is only visible to its members and METASPACE administrators" class="el-icon-lock ml-2 text-xl"></i></div>
            <div>
              <div class="info-line">
                <!---->
                1 member
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.0.members.0.user.primaryGroup.group.id" class="">
                  allProjects.0.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Created <mock-elapsed-time date="2018-08-29T05:00:00.000"></mock-elapsed-time></span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <!---->
            <div><i class="el-icon-edit"></i> <a href="/project/proj-one?tab=settings" class="">
                Manage project
              </a></div>
            <div><i class="el-icon-delete"></i> <a href="#" class="text-danger">Delete project</a></div>
          </div>
        </div>
      </div>
      <div class="project-item border border-solid border-gray-200 leading-5 relative rounded w-full p-5 box-border transition-shadow ease-in-out duration-200"><a href="/project/project%202" class="underlay"></a>
        <div class="item-body">
          <div class="info">
            <div class="info-line project-name pr-5 flex items-baseline"><a href="/project/project%202" class="text-2xl font-medium text-inherit no-underline truncate leading-none pb-2">
                project two
              </a>
              <!---->
            </div>
            <div>
              <div class="info-line"><span><a href="/datasets?prj=project%202" class=""><span>20 datasets</span></a>,
                </span>
                20 members
              </div>
              <div class="info-line">
                Managed by
                <span><span class="font-medium">TestUser1</span><span><span>, </span></span> <a href="/group/allProjects.1.members.0.user.primaryGroup.group.id" class="">
                  allProjects.1.members.0.user.primaryGroup.group.shortName</a>
                <!----></span></div>
              <div class="info-line"><span>
            Last submission <mock-elapsed-time date="2018-08-01T09:00:00.000"></mock-elapsed-time></span></div>
              <!---->
            </div>
          </div>
          <div class="actions">
            <div><i class="el-icon-picture"></i> <a href="/annotations?db=&amp;prj=project%202" class="">
                Browse annotations
              </a></div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="text-align: center;">
      <mock-el-pagination total="69" page-size="10" current-page="1" layout="prev,pager,next"></mock-el-pagination>
    </div>
  </div>
</div>
`;
